Update changelog, fix version notification, update proguard

--- a/app/src/main/res/raw-zh-rCN/changelog.html
+++ b/app/src/main/res/raw-zh-rCN/changelog.html
@@ -31,9 +31,9 @@
 <h4>v1.0.2 - 1/16/16</h4>
 <ul>
     <li><b>增加:</b> 选择Custom Tab浏览器</li>
-    <li><b>增加:</b> 打开关闭动画: 无, 从右往左滑入, 从下往上滑入</li>
+    <li><b>增加:</b> 打开关闭动画: 无、从右往左滑入、从下往上滑入</li>
     <li><b>增加:</b> ”分享“导航栏选项</li>
-    <li><b>增加:</b> 简体中文</li>
+    <li><b>增加:</b> 繁体、简体中文</li>
     <li><b>修复:</b> 网页指定导航栏颜色 bugs</li>
     <li><b>修复:</b> 预加载bugs</li>
     <li><b>修复:</b> 一些崩溃</li>
