--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -32,7 +32,7 @@
     <li><b>NEW:</b> Select Custom Tab browser</li>
     <li><b>NEW:</b> Enter/exit animations: none, slide in from right, slide in from bottom</li>
     <li><b>NEW:</b> Share toolbar button</li>
-    <li><b>NEW:</b> Simplified Chinese translation</li>
+    <li><b>NEW:</b> Traditional/simplified Chinese translations</li>
     <li><b>FIX:</b> Website-defined toolbar color bugs</li>
     <li><b>FIX:</b> Pre-loading bugs</li>
     <li><b>FIX:</b> Various crashes</li>
