--- a/app/src/main/res/raw-zh-rTW/changelog.html
+++ b/app/src/main/res/raw-zh-rTW/changelog.html
@@ -31,9 +31,9 @@
 <h4>v1.0.2 - 1/16/16</h4>
 <ul>
     <li><b>增加:</b> 選擇Custom Tab瀏覽器</li>
-    <li><b>增加:</b> 打開關閉動畫: 無, 從右往左滑入, 從下往上滑入</li>
+    <li><b>增加:</b> 打開關閉動畫: 無、從右往左滑入、從下往上滑入</li>
     <li><b>增加:</b> ”分享“導航欄選項</li>
-    <li><b>增加:</b> 簡體中文</li>
+    <li><b>增加:</b> 繁體、簡體中文</li>
     <li><b>修復:</b> 網頁指定導航欄顏色 bugs</li>
     <li><b>修復:</b> 預加載bugs</li>
     <li><b>修復:</b> 一些崩潰</li>
