--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -27,6 +27,24 @@
 </head>
 <body>
 
+<h4>v1.1.0 - 1/16/16</h4>
+<ul>
+    <li><b>NEW:</b> Quick switch bubbles (beta) - starts loading a link in Custom Tabs, resumes your
+        previous app, and displays a quick switch bubble for opening the loaded page. <br/><i>This
+            is beta: enable in the main settings page if you would like to try this and help report
+            any bugs.</i></li>
+    <li><b>NEW:</b> Page-based toolbar color (beta) - use the primary color from the originating
+        page/app as the toolbar color. <br/><i>This is beta: enable in the main settings page if you
+            would like to try this and help report any bugs.</i></li>
+    <li><b>NEW:</b> Lollipop+ page-opening slide-in/out animation</li>
+    <li><b>NEW:</b> Shortcut to Anticipate settings in Custom Tabs menu</li>
+    <li><b>NEW:</b> Portuguese, Russian, Spanish, and Turkish translations from OneSky - please
+        follow the link in the About dialog to translate the app to your language!
+    </li>
+    <li><b>FIX:</b> Light icons on light toolbar</li>
+    <li><b>FIX:</b> Various crashes and bugs</li>
+</ul>
+<br/>
 <h4>v1.0.2 - 1/16/16</h4>
 <ul>
     <li><b>NEW:</b> Select Custom Tab browser</li>
