Update changelog, change strings

--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -27,9 +27,22 @@
 </head>
 <body>
 
-<h4>v1.1.0 - 1/16/16</h4>
+<h4>v1.1.1 - 2/8/16</h4>
 <ul>
-    <li><b>NEW:</b> Quick switch bubbles (beta) - starts loading a link in Custom Tabs, resumes your
+    <li><b>ADD:</b> Minimize to QuickSwitch Bubble toolbar button<br/>
+        <i>Currently only displayed if "Open in QuickSwitch Bubble" is enabled.</i></li>
+    <li><b>IMPROVE:</b> Use QuickSwitch Bubbles without accessibility service enabled</li>
+    <li><b>IMPROVE:</b> Display QuickSwitch Bubble as long as task isn't killed</li>
+    <li><b>FIX:</b> Crash on Android 4.x when page-based toolbar color is enabled</li>
+    <li><b>FIX:</b> Discard bubble layout flickering</li>
+    <li><b>FIX:</b> Other crashes and bugs</li>
+</ul>
+Reminder: QuickSwitch Bubbles is still in beta. Use with caution and please report any bugs! Next
+few updates will bring more customizability and 4.x support.
+<br/>
+<h4>v1.1.0 - 2/3/16</h4>
+<ul>
+    <li><b>NEW:</b> QuickSwitch Bubbles (beta) - starts loading a link in Custom Tabs, resumes your
         previous app, and displays a quick switch bubble for opening the loaded page. <br/><i>This
             is beta: enable in the main settings page if you would like to try this and help report
             any bugs.</i></li>
