Add "Open in [you Chrome app]" to menu for recent Beta/Dev updates; change minimize to bubble icon, fix changelog showing logic, update changelog, update translations

--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -29,16 +29,24 @@
 
 <h4>v1.1.1 - 2/8/16</h4>
 <ul>
-    <li><b>ADD:</b> Minimize to QuickSwitch Bubble toolbar button<br/>
-        <i>Currently only displayed if "Open in QuickSwitch Bubble" is enabled.</i></li>
-    <li><b>IMPROVE:</b> Use QuickSwitch Bubbles without accessibility service enabled</li>
+    <li><b>NEW:</b> Minimize to QuickSwitch Bubble toolbar button<br/>
+        <i>Currently only displayed if "Open in QuickSwitch Bubble" is enabled. Will be
+            available </i></li>
+    <li><b>NEW:</b> "Open in [your Chrome app]" to Custom Tabs menu for newer Chrome Beta/Dev
+        (they have updated to only display opening in the default app)
+    </li>
+    <li><b>IMPROVE:</b> Use QuickSwitch Bubbles without accessibility service</li>
     <li><b>IMPROVE:</b> Display QuickSwitch Bubble as long as task isn't killed</li>
+    <li><b>IMPROVE:</b> Lollipop+ elevation on QuickSwitch Bubble</li>
+    <li><b>IMPROVE:</b> Higher resolution favicons for QuickSwitch Bubble</li>
     <li><b>FIX:</b> Crash on Android 4.x when page-based toolbar color is enabled</li>
     <li><b>FIX:</b> Discard bubble layout flickering</li>
     <li><b>FIX:</b> Other crashes and bugs</li>
 </ul>
-Reminder: QuickSwitch Bubbles is still in beta. Use with caution and please report any bugs! Next
-few updates will bring more customizability and 4.x support.
+<br/>
+Reminder: QuickSwitch Bubble is still in beta. Use with caution and please report any bugs!
+Next few updates will bring 4.x support and more customizability.
+<br/>
 <br/>
 <h4>v1.1.0 - 2/3/16</h4>
 <ul>
