Improve main settings page layout with full-width cards, fix earth icon tinting on 4.x

--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -30,11 +30,11 @@
 <h4>v1.1.1 - 2/8/16</h4>
 <ul>
     <li><b>NEW:</b> Minimize to QuickSwitch Bubble toolbar button<br/>
-        <i>Currently only displayed if "Open in QuickSwitch Bubble" is enabled. Will be
-            available </i></li>
-    <li><b>NEW:</b> "Open in [your Chrome app]" to Custom Tabs menu for newer Chrome Beta/Dev
-        (they have updated to only display opening in the default app)
+        <i>Currently only displayed if "Open in QuickSwitch Bubble" is enabled.</i></li>
+    <li><b>NEW:</b> "Open in [your Chrome app]" to Custom Tabs menu for newer Chrome versions, where
+        the default option has changed to opening in the default browser
     </li>
+    <li><b>IMPROVE:</b> Main settings page layout</li>
     <li><b>IMPROVE:</b> Use QuickSwitch Bubbles without accessibility service</li>
     <li><b>IMPROVE:</b> Display QuickSwitch Bubble as long as task isn't killed</li>
     <li><b>IMPROVE:</b> Lollipop+ elevation on QuickSwitch Bubble</li>
