Fix crash on Android 5.x, update changelog

--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -31,21 +31,25 @@
 <ul>
     <li><b>NEW:</b> Minimize to QuickSwitch Bubble toolbar button<br/>
         <i>Currently only displayed if "Open in QuickSwitch Bubble" is enabled.</i></li>
-    <li><b>NEW:</b> "Open in [your Chrome app]" to Custom Tabs menu for newer Chrome versions, where
-        the default option has changed to opening in the default browser
-    </li>
+    <li><b>NEW:</b> "Open in Chrome" in Custom Tabs menu for newer Chrome versions</li>
     <li><b>IMPROVE:</b> Main settings page layout</li>
     <li><b>IMPROVE:</b> Use QuickSwitch Bubbles without accessibility service</li>
-    <li><b>IMPROVE:</b> Display QuickSwitch Bubble as long as task isn't killed</li>
+    <li><b>IMPROVE:</b> Kill background tab task when bubble discarded, re-display bubble if tab is
+        still open
+    </li>
     <li><b>IMPROVE:</b> Lollipop+ elevation on QuickSwitch Bubble</li>
     <li><b>IMPROVE:</b> Higher resolution favicons for QuickSwitch Bubble</li>
+    <li><b>IMPROVE:</b> Dutch, Italian, and Turkish now added, along with updates for other
+        translations from OneSky. Please
+        follow the link in the About dialog to translate the app to your language!
+    </li>
     <li><b>FIX:</b> Crash on Android 4.x when page-based toolbar color is enabled</li>
     <li><b>FIX:</b> Discard bubble layout flickering</li>
     <li><b>FIX:</b> Other crashes and bugs</li>
 </ul>
 <br/>
-Reminder: QuickSwitch Bubble is still in beta. Use with caution and please report any bugs!
-Next few updates will bring 4.x support and more customizability.
+Reminder: QuickSwitch Bubble is still in beta. Use with caution and please report any bugs! Next few
+updates will bring 4.x support and more customizability.
 <br/>
 <br/>
 <h4>v1.1.0 - 2/3/16</h4>
