Fix changelog opening from notification

--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -32,9 +32,10 @@
     <li><b>NEW:</b> Minimize to QuickSwitch Bubble toolbar button<br/>
         <i>Currently only displayed if "Open in QuickSwitch Bubble" is enabled.</i></li>
     <li><b>NEW:</b> "Open in Chrome" in Custom Tabs menu for newer Chrome versions</li>
-    <li><b>IMPROVE:</b> Main settings page layout</li>
     <li><b>IMPROVE:</b> Use QuickSwitch Bubbles without accessibility service</li>
-    <li><b>IMPROVE:</b> Kill background tab task when bubble discarded, re-display bubble if tab is
+    <li><b>IMPROVE:</b> Main settings page layout</li>
+    <li><b>IMPROVE:</b> Kill Custom Tab background task when bubble is discarded, re-display bubble
+        if task is
         still open
     </li>
     <li><b>IMPROVE:</b> Lollipop+ elevation on QuickSwitch Bubble</li>
