Improve palette color detection

--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -35,14 +35,14 @@
     <li><b>IMPROVE:</b> Use QuickSwitch Bubbles without accessibility service</li>
     <li><b>IMPROVE:</b> Main settings page layout</li>
     <li><b>IMPROVE:</b> Kill Custom Tab background task when bubble is discarded, re-display bubble
-        if task is
-        still open
+        if task is still open
     </li>
     <li><b>IMPROVE:</b> Lollipop+ elevation on QuickSwitch Bubble</li>
     <li><b>IMPROVE:</b> Higher resolution favicons for QuickSwitch Bubble</li>
+    <li><b>IMPROVE:</b> Palette color detection for bubble loading progress</li>
     <li><b>IMPROVE:</b> Dutch, Italian, and Turkish now added, along with updates for other
-        translations from OneSky. Please
-        follow the link in the About dialog to translate the app to your language!
+        translations from OneSky. Please follow the link in the About dialog to translate the app
+        to your language!
     </li>
     <li><b>FIX:</b> Crash on Android 4.x when page-based toolbar color is enabled</li>
     <li><b>FIX:</b> Discard bubble layout flickering</li>
