--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -27,6 +27,12 @@
 </head>
 <body>
 
+<h4>v1.1.2 - 3/25/16</h4>
+<ul>
+    <li><b>FIX:</b> Various crashes</li>
+</ul>
+<br/>
+
 <h4>v1.1.1 - 2/8/16</h4>
 <ul>
     <li><b>NEW:</b> Minimize to QuickSwitch Bubble toolbar button<br/>
