--- a/app/src/main/res/raw/changelog.html
+++ b/app/src/main/res/raw/changelog.html
@@ -27,6 +27,13 @@
 </head>
 <body>
 
+<h4>v1.1.3 - 3/26/16</h4>
+<ul>
+    <li><b>FIX:</b> Discard bubble "X" not displayed</li>
+    <li><b>FIX:</b> Various crashes on 4.x</li>
+</ul>
+<br/>
+
 <h4>v1.1.2 - 3/25/16</h4>
 <ul>
     <li><b>FIX:</b> Various crashes</li>
